--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
             <div class="card-title">BERRYMIX</div>
             <div class="card-desc">色卡生成。</div>
         </a>
+                <a href="pixel_trans.html" class="card">
+            <span class="card-tag">Pixel Art</span>
+            <div class="card-title">PIXEL TRANS</div>
+            <div class="card-desc">像素滤镜。</div>
+        </a>
+                       <a href="pixel_text.html" class="card">
+            <span class="card-tag">Pixel Art</span>
+            <div class="card-title">PIXEL TEXT</div>
+            <div class="card-desc">像素转文字。</div>
+        </a>
     </div>
 
     <footer>
