--- a/index.html
+++ b/index.html
@@ -282,6 +282,18 @@
             <div class="card-title">PIXEL TEXT</div>
             <div class="card-desc">像素转文字。</div>
         </a>
+                </a>
+                       <a href="dots.html" class="card">
+            <span class="card-tag">Half Tone</span>
+            <div class="card-title">DOTS</div>
+            <div class="card-desc">网点。</div>
+        </a>
+                        </a>
+                       <a href="dotscmyk.html" class="card">
+            <span class="card-tag">Half Tone</span>
+            <div class="card-title">CMYK DOTS</div>
+            <div class="card-desc">网点，CMYK偏移。</div>
+        </a>
     </div>
 
     <footer>
