--- a/index.html
+++ b/index.html
@@ -363,7 +363,11 @@
             <div class="card-title">RISO</div>
             <div class="card-desc">多油墨RISO印刷。</div>
         </a>
-
+        <a href="scan.html" class="card">
+            <span class="card-tag">Digit Art</span>
+            <div class="card-title">DIGIT SCAN</div>
+            <div class="card-desc">亮度饱和度区块效果。</div>
+        </a>
     </div>
 
     <footer>
